# epub-agent-skill

./: README.md  example_usage.py  pyproject.toml  requirements.txt
epub-summary/: SKILL.md
epub-summary/assets/: summary_template.md
epub-summary/scripts/: extract_epub.py
epub_agent_skill/: __init__.py  main.py
tests/: __init__.py  test_main.py
