[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub-agent-skill"
version = "0.1.0"
description = "An Agent Skill for extracting structured outlines and chapter summaries from EPUB books using LLMs"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.11.1",
    "typing-extensions>=4.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["epub_agent_skill*"]

[project.urls]
Homepage = "https://github.com/yourusername/epub-agent-skill"
Repository = "https://github.com/yourusername/epub-agent-skill.git"